Nieuwe FAW pagina digitaal toetsen

--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -2,7 +2,7 @@
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
 <!-- Back to top -->
-<p><a id="topmenu"></a></p>
+<p><a id="topmenu"></a></span></p>
 
 <!-- Menubalk -->
 <div class="grid-row">
@@ -47,13 +47,37 @@
             </tr>
         </tbody>
     </table>
-    <hr />
-    <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={c2faa668-2a9d-4cc8-9bb4-961d69d83e0e}&amp;action=embedview&amp;wdEmbedCode=0&amp;wdPrint=0" width="100%" height="800px"></iframe></p>
-    <p>&nbsp;</p>
-    <hr />
-    <p>&nbsp;</p>
-    <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={8e01fea3-17a2-4834-b24a-76a3cac4fde0}&amp;action=embedview&amp;wdEmbedCode=0&amp;wdPrint=0" width="100%" height="800px"></iframe></p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
 </div>
+
+<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
+    <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers</b></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I made a few late adjustments to the exam in TestVision. What do I need to do?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do students need to bring to the exam?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">How long in advance do I need to be present at the location?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ4">What do I need to do during the exam?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ5">What happens if someone is late? Can students nevertheless start the exam?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ6">How is the extra time for students taken care of?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ7">What if a student does not have extra time during the exam?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ8">What will happen if anything goes wrong during the exam?</a></span></p>
+    <br>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ9">Share this page with students</a></span></p>
+</div>
+
+<!-- FAQ1-->
+<p>&nbsp;</p>
+<p><a id="FAQ1"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>I made a few late adjustments to the exam in TestVision. What do I need to do?</strong></h4>
+</div>
+<p>If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: publish your changes. If you have added extra questions to the test, please do not forget to actually link question(s) to the exam before publishing your recent changes.
+You can no longer ask an ICTO employee to perform these steps because the 1 week deadline has passed, the consequence is that you must ensure these steps yourself to avoid mistakes. You can of course reach ICTO for questions but we are not responsible for errors caused by changes after the 1-week deadline nor can we guarantee a timely response.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
