TestVision update instructies

--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
@@ -1,9 +1,6 @@
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
-<!-- Back to top -->
-<p><a id="topmenu"></a></p>
-
 <!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
@@ -48,11 +45,124 @@
             </tr>
         </tbody>
     </table>
-    <hr />
-    <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={0ff1def0-bb88-4f00-b37e-e6d4dec9d4f7}&amp;action=embedview" width="100%" height="800px"></iframe></p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <hr />
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-</div>
+  </div>
+
+  <!-- Back to top -->
+  <p><a id="topmenu"></a></p>
+
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers: questions</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q1">I'm working with TestVision for the first time. What does the general process look like?</a></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q2">How can I edit a question?</a></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q3">How can I change the name of a question?</a></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q4">How can I add a question?</a></span></p>
+      <br>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers: test</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T1">Which basic settings are there in a test?</a></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">What if I'd like to use different settings in a test?</a></span></p>
+      <br>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students" target=_blank>Share this page with students</a></span></p>
+  </div>
+
+  <!-- FAQ Questions 1 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ_Q1"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>I'm working with TestVision for the first time. What does the general process look like?</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
+  <!-- FAQ Questions 2 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ_Q2"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>How can I edit a question?</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
+  <!-- FAQ Questions 3 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ_Q3"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>How can I change the name of a question?</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
+  <!-- FAQ Questions 4 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ_Q4"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>How can I add a question?</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
+  <!-- FAQ Test 1 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ_T1"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>Which basic settings are there in a test?</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
+  <!-- FAQ Test 2 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ_T2"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>What if I'd like to use different settings in a test?</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
