--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -1,9 +1,6 @@
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
-<!-- Back to top -->
-<p><a id="topmenu"></a></span></p>
-
 <!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
@@ -20,6 +17,7 @@
 
 
 <div>
+    <p style="text-align: center;">Thise page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> if details are missing.</p>
     <hr />
     <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 53px;" border="0">
         <tbody>
@@ -49,6 +47,9 @@
     </table>
 </div>
 
+<!-- Back to top -->
+<p><a id="topmenu"></a></p>
+
 <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
     <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers</b></span></p>
     <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I made a few late adjustments to the exam in TestVision. What do I need to do?</a></span></p>
@@ -61,10 +62,10 @@
     <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ8">What will happen if anything goes wrong during the exam?</a></span></p>
     <br>
     <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ9">Share this page with students</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students" target=_blank>Share this page with students</a></span></p>
 </div>
 
-<!-- FAQ1-->
+<!-- FAQ1 -->
 <p>&nbsp;</p>
 <p><a id="FAQ1"></a></p>
 <p>&nbsp;</p>
@@ -73,8 +74,145 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4><strong>I made a few late adjustments to the exam in TestVision. What do I need to do?</strong></h4>
 </div>
-<p>If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: publish your changes. If you have added extra questions to the test, please do not forget to actually link question(s) to the exam before publishing your recent changes.
+
+<p>If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: <a href="#publishchanges"><span>publish your changes</span></a>. If you have added extra questions to the test, please do not forget to actually <a href="#linkquestions"><span>link question(s) to the exam</span></a> before publishing your recent changes.
 You can no longer ask an ICTO employee to perform these steps because the 1 week deadline has passed, the consequence is that you must ensure these steps yourself to avoid mistakes. You can of course reach ICTO for questions but we are not responsible for errors caused by changes after the 1-week deadline nor can we guarantee a timely response.</p>
+
+    <!--How to publish changes -->
+    <div id="publishchanges" class="enhanceable_content dialog" style="width:500px">
+    <strong>How to publish changes</strong>
+    <p>text</p>
+    </div>
+
+    <!--How to link questions -->
+    <div id="linkquestions" class="enhanceable_content dialog" style="width:500px">
+    <strong>How to link questions to the exam</strong>
+    <p>text</p>
+    </div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ2 -->
+<p>&nbsp;</p>
+<p><a id="FAQ2"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>What do students need to bring to the exam?</strong></h4>
+</div>
+<p>Students need to bring their UvA Pass and identification. They also need to enter their UvAnetID and password in TestVision to login. Students are allowed to bring bags and they can place them under their table. Share <a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students"target=_blank>this page</a> for more frequently asked questions for students.
+</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ3 -->
+<p>&nbsp;</p>
+<p><a id="FAQ3"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>How long in advance do I need to be present at the location?</strong></h4>
+</div>
+<p>Please be present on site 45 minutes before the exam begins. Go in and introduce yourself to the Assistant Floor Manager(s) present at the front of the room (they need to know you are the instructor). You will go through and double check the TestVision exam together with the floor manager to prevent any mistakes or errors. If you have questions or when in doubt, don't hesitate to ask the floor manager for advice or assistance. </p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ4 -->
+<p>&nbsp;</p>
+<p><a id="FAQ4"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>What do I need to do during the exam?</strong></h4>
+</div>
+<p>When the exam begins, you may take a seat in front of the room. If students have substantive questions about the exam they can raise their hand and you can assist them. Teachers are sometimes asked to walk students to the hallway in case they need to go to the toilet.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ5 -->
+<p>&nbsp;</p>
+<p><a id="FAQ5"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>What happens if someone is late? Can students nevertheless start the exam?</strong></h4>
+</div>
+<p>If a student is 30 minutes late (or later), they cannot enter the exam room. Also: students can only leave the exam room after 30 minutes, not earlier.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ6 -->
+<p>&nbsp;</p>
+<p><a id="FAQ6"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>How is the extra time for students taken care of?</strong></h4>
+</div>
+<p>Students must request extra time well in advance via their student advisor (or student dean). It will take some time before the extra time is processed in SIS so we advice students to do this at least a month prior to the exam. One week before the exam begins, the registration office pulls data from SIS and adds it to the exam in TestVision. </p>
+<p>If you know a student who is late with requesting extra time, you can send an email to the registration office (<a href="mailto:tentamenvoorziening-sw@uva.nl">tentamenvoorziening-sw@uva.nl</a>) with the student number, student name, and the exam concerning the extra time (please include the study advisor or student dean in the CC). The registration office can then manually grant extra time to the exam in TestVision. </p>
+<p>On <a href="https://student.uva.nl/onderwerpen/hoe-vraag-je-een-tentamen-voorziening-aan">this page</a> students can find more information about extra time.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ7 -->
+<p>&nbsp;</p>
+<p><a id="FAQ7"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>What if a student does not have extra time during the exam?</strong></h4>
+</div>
+<p>If there is a student who is entitled to extra time but have not been given it in TestVision, the floor managers can grant extra time on an ad hoc basis. Please note that students need to indicate this as soon as possible. If the student has already closed the test (at the end) then extra time can no longer be offered. Students can see a timer running in TestVision and will receive a notification 5 minutes before the end of the exam, they should therefore monitor whether the extra time has been granted or not. </p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- FAQ8 -->
+<p>&nbsp;</p>
+<p><a id="FAQ8"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>What will happen if anything goes wrong during the exam?</strong></h4>
+</div>
+<p>The assistant floor managers have the telephone number of ICTO and can reach an ICTO staff member who is ready to act as a backup. In case something goes wrong, make sure students in the room remain quiet and that you remain at the front (so the assistant floor managers can ask you checkup questions to solve the problem as quickly as possible). Please know there’s not much else you can do yourself to solve breakdowns or errors. </p>
+<p><a href="https://canvas.uva.nl/courses/8175/pages/contact">Contact ICTO</a> when something went wrong during the exam. If you are in doubt about giving compensation or about what kind of compensation is needed, please contact the exam committee (do not consult an ICTO staff member for advice on this matter). If you have any questions about the technical realization of compensation in TestVision, you can of course contact ICTO for help. </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
