--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -1,9 +1,6 @@
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
-<!-- Back to top -->
-<p><a id="topmenu"></a></p>
-
 <!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
@@ -20,7 +17,7 @@
 
 
 <div>
-    <p style="text-align: center;">Thise page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> for now.</p>
+    <p style="text-align: center;">Thise page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> if details are missing.</p>
     <hr />
     <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 53px;" border="0">
         <tbody>
@@ -48,11 +45,33 @@
             </tr>
         </tbody>
     </table>
-    <hr />
-    <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={155919a3-81e2-4b02-9f54-30d9ac010ee0}&amp;action=embedview" width="100%" height="800px"></iframe></p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <hr />
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-</div>
+  </div>
+
+    <!-- Back to top -->
+  <p><a id="topmenu"></a></p>
+
+
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">test question</a></span></p>
+      <br>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students" target=_blank>Share this page with students</a></span></p>
+  </div>
+
+  <!-- FAQ1 -->
+  <p>&nbsp;</p>
+  <p><a id="FAQ1"></a></p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+      <h4><strong>test question</strong></h4>
+  </div>
+  <p>text</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
